@@ -1,4 +1,4 @@
 #!/usr/bin/env python
 # -*- coding: utf-8 -*-
-__version__ = "5.2.0a5"
+__version__ = "5.2.0a6"
 __author__ = "Chris Griffith"
